--- a/css/styles.css
+++ b/css/styles.css
@@ -117,3 +117,155 @@ nav{
     border-style: none;
 }
 
+/* SECTION2 */
+
+#section2{
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 5vw 107px;
+    margin-top: 161px;
+    background-color: rgb(248, 248, 254);
+}
+
+#section2 .illus{
+    max-width: 42%;
+    margin: 0;
+    padding: 202px 0 0 0;
+}
+
+.feature{
+    display: flex;
+    flex-direction: column;
+    margin-top: 178px;
+    text-align: left;
+}
+
+.feature h2{
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 38px;
+    color: #070439;
+}
+
+.feature p{
+    color: #070439;
+    padding-right: 13.8194444vw;
+    margin-top: 16px;
+    margin-bottom: 15px;
+}
+
+.feature-link a{
+    color: #3c9f8f;
+    align-items: center;
+    position: relative;
+    font-size: 1rem;
+}
+
+.card{
+    
+    margin: 45px 0 0;
+    padding: 0 33px;
+    width: 300px;
+    background: #FFF;
+    border-radius: 3.93258px;
+    text-align: left;
+    box-shadow: 0px 0px 8px 4px rgba(244, 244, 250);
+}
+
+.testimonial{
+    padding: 49px 0 16px;
+    color: rgb(7, 4, 57);
+}
+
+.author-cont{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 26px;
+    align-items: center;
+}
+
+.author-cont img{
+    border-radius: 100%;
+    height: 32px;
+    width: 32px;
+}
+
+.author{
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.author .author-name{
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 5px;
+}
+
+.author .author-title{
+    font-size: 9px;
+    font-weight: 300;
+}
+
+/* SECTION3 */
+
+#section3{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 307px;
+    justify-content: space-between;
+    background: rgb(88, 89, 137);
+    padding: 15px 120px 0px 100px;
+}
+
+.info{
+    color: #ffffff;
+    text-align: left;
+    padding: 0;
+}
+
+.info h3{
+    margin-bottom: 17px;
+    font-size: 30px;
+    
+}
+
+.formulario{
+    width: 73%;
+}
+
+.formulario button{
+    width: 200px;
+    height: 3rem;
+    font-weight: 700;
+    border-radius: 0.091911875rem;
+    font-size: 0.875rem;
+    box-shadow: 1px 1px 3px rgba(7, 4, 59, 0.157043);
+    background: #3065f8;
+    border: 1px solid #3065f8;
+    color: #fff;
+    cursor: pointer;
+    border-style: none;
+}
+
+.formulario button:hover{
+    background-color: rgb(107, 154, 255);
+    border-style: none;
+}
+
+.form-input{
+    width: calc(100% - 16px);
+    height: calc(3rem - 20px);
+    border: 1px solid #fff;
+    padding: 11px 8px 9px;
+    box-shadow: 1px 1px 3px rgba(7, 4, 59, 0.157043);
+    font-size: 0.75rem;
+    border-radius: 0.091911875rem;
+    margin-bottom: 20px;
+}
+
+.info p{
+    padding-right: 18.05555vw;
+}
